compiler-plugin-tests/src/test/resources/sample5/s5-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample5
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: c2c.deployment.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 9090
  tls:
  - hosts:
    - "c2c.deployment.test"
